[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moondream_mcp"
version = "0.1.0"
description = "Moondream MCP server for browser automation and vision model integration"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "playwright",
    "moondream",
    "fastapi",
    "uvicorn",
    "aiohttp",
    "langchain",
    "langchain-community",
    "langchain-openai"
]
